# Tabla-_verdad

./: Cargo.toml  README.md
src/: main.rs
src/internals/: expression.rs  mod.rs  mostrar.rs  parse.rs  validar.rs  var_values.rs
